feat: Adjust style in 'Eventcard', 'Header', 'EventDetails' and 'Home'

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -51,7 +51,7 @@
   border: none;
   border-radius: 5px;
   width: 100%;
-  background-color: coral;
+   background-color: #EDF2F4;
   padding: 20px;
   font-size: 25px;
   color: white;
