--- a/src/components/EventCard/styles.css
+++ b/src/components/EventCard/styles.css
@@ -1,19 +1,30 @@
 .card-evento {
-    width: 22rem;
+    width: 100%;
+    max-width: 22rem;
     height: 36rem;
-    border: 1px solid gray;
-    box-shadow: 0 0 5px gray;
+    border: none;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     border-radius: 15px;
-    background-color: rgb(255, 251, 247);
+    background-color: #fff;
     display: flex;
     flex-direction: column;
+  }
+  
+  @media (max-width: 900px) {
+    .card-evento {
+      max-width: 100%;
+      width: 100%;
+      margin: 0 auto;
+    }
   }
 
   /* button com display none e initial sumiu */
 
   .card-evento img {
     width: 100%;
-    height: 40%; /* mudei aqui */
+    height: 14.4rem; /* 40% of 36rem */
+    object-fit: cover;
+    object-position: center;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
   }
@@ -55,7 +66,7 @@
     border-radius: 5px;
     border: none;
     color: rgb(255, 255, 255);
-    background-color: rgb(154, 0, 0);
+    background-color: #00171F;
     width: 100%;
     margin-top: 1.5rem;
     font-size: 1rem;
@@ -86,9 +97,9 @@
   }
   
   .botao-acoes:nth-of-type(1) {
-    background-color: rgb(154, 0, 0);
+    background-color: #d13d3d;
   }
   
   .botao-acoes:nth-of-type(2) {
-    background-color: rgb(235, 133, 0);
+    background-color: #00A8E8;
   }
