--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,11 +1,11 @@
 .header-app {
     width: 100%;
-    padding: 30px;
+    padding: 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(254, 254, 254);
-    box-shadow: 0 0 5px gray;
+    background-color: #003459;
+    box-shadow: 0 0 10px gray;
 }
 
 .header-app div {
@@ -17,4 +17,8 @@
 .header-app img {
     width: 30px;
     height: 30px;
+}
+
+.header-app h1 {
+    color: #fff;
 }
