--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: rgb(255, 204, 185);
+  background-color: #EDF2F4;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
