--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,15 +1,69 @@
 .container {
+  max-width: 1500px;
   display: flex;
-  gap: 5rem;
-  /* justify-content: space-between; */
-  padding: 50px;
+  flex-direction: column;
+  margin: 20px auto;
+  gap: 3rem;
+  width: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+
+/* Default styles for larger screens */
+.container-eventos {
+  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 2fr));
+  gap: 2rem;
+  align-items: start;
+}
+
+@media (min-width: 900px) {
+  .container {
+    flex-direction: row;
+    padding: 50px;
+    background-color: #EDF2F4;
+  }
   
+  .container-form {
+    position: sticky;
+    top: 2rem;
+    height: fit-content;
+    max-width: 400px;
+    width: 100%;
+  }
+  
+  .container-eventos {
+    padding-left: 2rem;
+    margin-left: 2rem;
+  }
+}
+
+/* Mobile styles */
+@media (max-width: 900px) {
+  .container-eventos {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
+    box-sizing: border-box;
+    gap: 2rem;
+  }
+
+  .container-eventos > * {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .container-form {
+    margin-top: 30px;
+  }
 }
 
 .home-title {
   font-size: 3rem;
   text-align: center;
-  margin-block: 3rem;
+  margin: 40px 20px;
 }
 
 .events-types {
@@ -23,12 +77,10 @@
   width: 100%;
 }
 
-/* Estilos para centralizar quando houver poucos itens */
 .events-types {
   justify-content: center;
 }
 
-/* Ajustes de responsividade para o container */
 @media (max-width: 1200px) {
   .events-types {
     max-width: 900px;
@@ -50,11 +102,12 @@
   }
 }
 
-.container form {
+.container-form {
   font-size: 30px;
   height: fit-content; /* altura suficiente para cabter o conteudo */
-  background-color: rgb(255, 255, 255);
-  border: 1px solid gray;
+  background-color: #fff;
+  border: none;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   border-radius: 15px;
   padding: 30px;
   display: flex;
@@ -63,14 +116,14 @@
   gap: 20px;
 }
 
-.container form div {
+.container-form div {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 5px
 }
 
-.container form input {
+.container-form input {
   width: 100%;
   padding: 10px;
   outline: none;
@@ -78,43 +131,35 @@
   border-radius: 5px;
 }
 
-.container .label-imagem label {
+.container-form .label-imagem label {
   border: 2px solid black;
   padding: 20px;
   border-radius: 5px;
 }
 
-.container .label-imagem input{
+.container-form .label-imagem input{
   display: none;
 }
 
-.container form button {
+.container-form button {
   border: none;
   border-radius: 10px;
   width: 100%;
-  background-color: coral;
+  background-color: #00171F;
   padding: 20px;
   font-size: 25px;
   color: white;
 }
 
-.preview-imagem {
+.container-form .preview-imagem {
   width: 100%;
   padding: 1rem;
 }
 
-.preview-imagem img {
+.container-form .preview-imagem img {
   width: 65%;
   height: 20rem;
   display: block;
   margin-inline: auto;
-}
-
-.container-eventos {
-  width: 70%;
-  max-width: 85rem;
-  display: flex;
-  gap: 2rem;
-  flex-wrap: wrap;
 }
 
