--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -145,10 +145,14 @@
   border: none;
   border-radius: 10px;
   width: 100%;
-  background-color: #00171F;
+  background-color: #003459;
   padding: 20px;
   font-size: 25px;
   color: white;
+}
+
+.container-form button:hover {
+  background-color: #00171F;
 }
 
 .container-form .preview-imagem {
