--- a/src/components/EventCard/styles.css
+++ b/src/components/EventCard/styles.css
@@ -42,16 +42,23 @@
     flex-direction: column;
   }
   
+  .infos-evento h2 {
+    margin: 0;
+    color: #2B2D42;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+  }
+
   .infos-evento p {
     margin-top: 1rem;
   }
 
   .infos-evento p:first-of-type {
-    display: -webkit-box;
-    text-overflow: ellipsis;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
+    white-space: nowrap;
     overflow: hidden;
+    text-overflow: ellipsis;
   }
   
   .botoes-card {
